# PushBackAutonomous

./: .gitignore  README.md  my_test  project.pros  ramsete_test  robot_animator.py  robot_log_19700101_000000.txt  routes.h  test.py  theta_grapher.py  velo_checker.py  velocity_tuner.py
include/: config.hpp  main.h  test.txt  test_awp.txt
include/controllers/: drivetrain_controller.h  drivetrain_controller.hpp  pid_controller.hpp  ramsete_controller.h  ramsete_controller.hpp
include/filters/: exponential_filter.h  heading_filter.h  kalman_2d.h  slew_rate_limiter.hpp
include/hardware/: distance.hpp  enhanced_digital_out.hpp  robot.hpp
include/navigation/: i_localization.hpp  localization_manager.hpp  mcl.hpp  odometry.h  odometry.hpp  odometry_reset.hpp  trajectory.hpp
include/routes/: routes.h
include/utilities/: config.hpp  logger.h  logger.hpp
src/: drivetraincontroller.cpp  main.cpp  odom.cpp  ramsetecontroller.cpp  routes.h
src/controllers/: drivetrain_controller.cpp  pid_controller.cpp  ramsete_controller.cpp
src/filters/: exponential_filter.cpp  heading_filter.cpp  kalman_2d.cpp  slew_rate_limiter.cpp
src/hardware/: distance.cpp  enhanced_digital_out.cpp  robot.cpp
src/navigation/: localization_manager.cpp  mcl.cpp  odometry.cpp  odometry_old.cpp  trajectory.cpp  (+1 more)
tests/: reformater.py  test.py
tests/navigation/odometry_testing/: CMakeLists.txt  test_odometry.cpp
tests/navigation/odometry_testing/include/: mock_pros.h
tests/navigation/odometry_testing/include/navigation/: odometry.h
tests/navigation/odometry_testing/src/: odometry.cpp
(+12 files in other folders)
